--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main, develop, 'feature/*', 'release/*', 'hotfix/*' ]
   pull_request:
     branches: [ main, develop ]
+  workflow_call:
 
 #jobs:
 #  test:
