--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -273,10 +273,10 @@ jobs:
             - **macOS M1/M2**: `lsr-aarch64-apple-darwin.tar.gz`
             
             ### Install scripts(install.sh(unix,mac),install.ps1 for windows)
-                ```bash
-                    chmod +x ./install.sh
-                      ./install.sh
-                  // same for ..sp1
-                  ```
+            ```bash
+             chmod +x ./install.sh
+              ./install.sh
+              same for ..sp1
+            ```
           env:
             GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
