--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "lsrs"
 version = "0.1.3"
 edition = "2024"
 authors = ["Mohammed, Amrani amranimohamad040@gmail.com"]
-description = "A hello world CLI tool with Rust and Node.js bindings"
+description = "CLI tool written in Rust that will replace ls written in C instroducing lsrs "
 license = "MIT"
 repository = "https://github.com/MohammedElMO/lsrs"
 keywords = ["cli", "npm", "rust", "napi", "ls"]
